Thu 07-Sep-2000 21:29:00 BST  Neil Booth  <NeilB@earthling.net>

	* Makefile.in: Remove references to cppulp.{c,o}.
	* cppinit.c (initialize_builtins, cpp_start_read,
	cpp_handle_option): Update to use cpp_options structure.
	* cppulp.c: Remove.

2000-09-07  Joseph S. Myers  <jsm28@cam.ac.uk>

	* c-common.c (time_char_table): Allow %#b and %#h.

2000-09-07 Herman A.J. ten Brugge <Haj.Ten.Brugge@net.HCC.nl>

	* reorg.c (find_end_label): If the basic block reorder pass moves the
	return insn to some other place try to locate it again and put our
	end_of_function_label there.
	* reorg.c (relax_delay_slots): Check if find_end_label created a
	new label that invalidates the current optimazation.

2000-09-07  Catherine Moore  <clm@redhat.com>

        * unroll.c (unroll_loop): Check for unconditional jumps
        to loop continuation.  Delete if n_iterations is 1.
        (ujump_to_loop_cont): New routine.

2000-09-07  Bernd Schmidt  <bernds@redhat.co.uk>

	* rtl.c (class_narrowest_mode): Add entries for MODE_VECTOR_INT and
	MODE_VECTOR_FLOAT.
	* reload.c (regno_clobbered_p): Accept new arg, MODE, and use it
	to handle multiword modes correctly.  All callers and the declaration
	changed.
  
2000-09-06  Mark Mitchell  <mark@codesourcery.com>

	* c-common.h (prep_stmt): Declare.
	(lang_expand_stmt): Likewise.
	* c-decl.c (lang_expand_stmt): Remove.
	* c-semantics.c (lang_expand_stmt): Define.
	(prep_stmt): New function.
	(expand_stmt): Handle common statement types here.
	
2000-09-07  Niibe Yutaka  <gniibe@m17n.org>, Kaz Kojima  <kkojima@rr.iij4u.or.jp>, Alexandre Oliva  <aoliva@redhat.com>

	* configure.in (sh-*-linux*): Added.
	* configure: Rebuilt.
	* config/sh/t-linux: New file.
	* config/sh/sh.h (USERMODE_BIT): Define.
	(TARGET_USERMODE): Likewise.
	(TARGET_SWITCHES): New switches for the bits above.
	(INITIALIZE_TRAMPOLINE): Call __ic_invalidate in USERMODE.
	* config/sh/linux.h: New file.
	* config/sh/lib1funcs.asm (GLOBAL): Don't prefix symbols with