@@ -50,8 +50,8 @@
 ;; Long term, we want to expose the "e" half to the compiler (gives us
 ;; 8 more 16bit registers).  At that point addhi and subhi can't use adds/subs.
 
-;; There's currently no way to have a insv/extzv expander for the h8/300h
-;; because word_mode is different for the h8/300 and h8/300h.
+;; There's currently no way to have a insv/extzv expander for the H8/300H
+;; because word_mode is different for the H8/300 and H8/300H.
 
 ;; Shifts/rotates by small constants should be handled by special
 ;; patterns so we get the length and cc status correct.
@@ -561,7 +561,7 @@
   "
 {
   /* Force operand1 into a register if we're compiling
-     for the h8/300.  */
+     for the H8/300.  */
   if (GET_CODE (operands[1]) != REG && TARGET_H8300)
     operands[1] = force_reg (HImode, operands[1]);
 }")
@@ -767,7 +767,7 @@
 ;; MULTIPLY INSTRUCTIONS
 ;; ----------------------------------------------------------------------
 
-;; Note that the h8/300 can only handle umulqihi3.
+;; Note that the H8/300 can only handle umulqihi3.
 
 (define_insn "mulqihi3"
   [(set (match_operand:HI 0 "register_operand" "=r")
@@ -1770,7 +1770,7 @@
 ;; this in both rtl and at insn emit time.  Ideally, we'd use rtl as that would
 ;; give the optimizer more cracks at the code.  However, we wish to do things
 ;; like optimizing shifting the sign bit to bit 0 by rotating the other way.
-;; There is rtl to handle this (rotate + and), but the h8/300 doesn't handle
+;; There is rtl to handle this (rotate + and), but the H8/300 doesn't handle
 ;; 16 bit rotates.  Also, if we emit complicated rtl, combine may not be able
 ;; to detect cases it can optimize.
 ;;
