@@ -1,3 +1,9 @@
+2000-09-07  Kazu Hirata  <kazu@hxi.com>
+
+	* config/h8300.h: Fix comment typos.
+	* config/h8300/h8300.md: Likewise.
+	* config/h8300/lib1funcs.asm: Likewise.
+
 Thu 07-Sep-2000 21:29:00 BST  Neil Booth  <NeilB@earthling.net>
 
 	* Makefile.in: Remove references to cppulp.{c,o}.
